// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
    htmlFor="cbInput"
  >
    <input
      defaultChecked={true}
      disabled={true}
      id="cbInput"
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      role="button"
      tabIndex={0}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
    htmlFor="cbInput"
  >
    <input
      defaultChecked={false}
      disabled={true}
      id="cbInput"
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      role="button"
      tabIndex={0}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
    htmlFor="cbInput"
  >
    <input
      defaultChecked={false}
      disabled={true}
      id="cbInput"
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      role="button"
      tabIndex={0}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  />
</div>
`;
